<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.xardev.tangoshop.presentation.viewModels.MainViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.HomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|snap|enterAlwaysCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/constraint_layout">

                    <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@android:color/transparent"
                        android:outlineProvider="none"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="70dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/ic_tango"
                        app:tint="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/tango" />

                    <EditText
                        android:id="@+id/search"
                        style="@style/editText_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:drawableStart="@drawable/ic_search"
                        android:ems="10"
                        android:hint="@string/find_products_you_love"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/featured_products_card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:cardCornerRadius="8dp"
                        android:visibility="gone"
                        tools:visibility="visible"
                        app:layout_constraintEnd_toEndOf="@+id/search"
                        app:layout_constraintStart_toStartOf="@+id/search"
                        app:layout_constraintTop_toBottomOf="@+id/search">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <androidx.viewpager.widget.ViewPager
                                android:id="@+id/viewPager"
                                android:layout_width="match_parent"
                                android:layout_height="160dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.tabs.TabLayout
                                android:id="@+id/tabLayout"
                                android:layout_width="wrap_content"
                                android:layout_height="10dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="16dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:tabBackground="@drawable/indicator_selector"
                                app:tabGravity="center"
                                app:tabIndicatorHeight="0dp"
                                app:tabMaxWidth="13dp"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_extrabolditalic"
                        android:text="@string/special"
                        android:textSize="18sp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="@+id/search"
                        app:layout_constraintTop_toBottomOf="@+id/featured_products_card" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/metropolis_extrabolditalic"
                        android:text="@string/deals"
                        android:textColor="@color/secondary"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        app:layout_constraintTop_toTopOf="@+id/textView4" />

                    <include
                        android:id="@+id/deals_timer"
                        layout="@layout/deal_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="@+id/search"
                        app:layout_constraintTop_toTopOf="@+id/textView5" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_anim" />
        </LinearLayout>

        <LinearLayout
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            tools:visibility="visible"
            android:visibility="@{viewModel.networkError ? View.VISIBLE : View.GONE}">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_no_internet"
                android:contentDescription="@string/no_intenet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/opps_check_your_internet_and_try_again" />

            <Button
                android:id="@+id/btn_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/white"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <TextView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="32dp"
            tools:visibility="visible"
            android:visibility="@{viewModel.noProductsAvailable ? View.VISIBLE : View.GONE}"
            android:text="@string/sorry_we_couldn_t_find_nany_products_with_that_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>