<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.xardev.tangoshop.domain.models.Product" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activities.ProductDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_back"
                style="@style/Widget.Material3.Button.TextButton.Icon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="120dp"
                android:outlineProvider="none"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="16dp"
                app:checkedIcon="@drawable/wishlist_menu_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_product_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <CheckBox
                        android:id="@+id/add_to_wishlist"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:button="@drawable/wishlist_menu_icon"
                        android:elevation="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/metropolis_medium"
                android:text="@string/by"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/materialCardView"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:text="@{product.manufacturer.name}"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                tools:ignore="SmallSp"
                tools:text="Brand" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@android:style/Widget.Material.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:max="5"
                android:numStars="5"
                android:transformPivotX="80dp"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@{product.product_name}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/brand"
                tools:ignore="SmallSp"
                tools:text="Product name" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/metropolis_extrabolditalic"
                android:text="@{'$' + product.gross_price}"
                android:textColor="@color/secondary"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/quantity"
                app:layout_constraintEnd_toEndOf="@+id/ratingBar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:ignore="SmallSp"
                tools:text="$45" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/product_decription"
                android:textColor="@color/text_secondary"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/price"
                app:layout_constraintTop_toBottomOf="@+id/price" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/text_primary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/price"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_round_corners"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/free_worlwide_shipping"
                android:textColor="@color/text_primary"
                app:drawableStartCompat="@drawable/ic_world"
                app:layout_constraintEnd_toEndOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/price"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/btn_add_to_cart"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/secondary"
                android:fontFamily="@font/metropolis_extrabold"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_cart_filled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/Widget.Material3.Button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:fontFamily="@font/metropolis_extrabold"
                android:padding="0dp"
                android:text="+"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/quantity"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/quantity"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawablePadding="16dp"
                android:fontFamily="@font/metropolis_extrabold"
                android:padding="12dp"
                android:text="1"
                android:textColor="@color/text_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_plus"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btn_minus"
                style="@style/Widget.Material3.Button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:fontFamily="@font/metropolis_extrabold"
                android:padding="0dp"
                android:text="-"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/quantity"
                app:layout_constraintEnd_toStartOf="@+id/quantity"
                app:layout_constraintTop_toTopOf="@+id/quantity"
                tools:ignore="HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>